# Bidirectional-Path-Tracer

./: .clang-format  .gitignore  BXDF_MIGRATION.md  CMakeLists.txt  README.md  build.ps1  build.sh  vcpkg.json
dump/hacky with mis/: bdpt.cpp
scenes/: caustics-room.yaml  caustics.yaml  coffee_machine.yaml  glass-of-water.yaml  glass_of_water_ice.yaml  glass_scene.yaml  lego_bulldozer.yaml  teapot_full.yaml  volumetric_caustic.yaml  water_caustic.yaml
scenes/data/volumetric-caustic/: scene_v3.xml
src/: aabb.h  camera.h  color.h  hittable_list.h  main.cpp  main.h  perlin.h  quad.h  vec3.h  wpng.h
src/acceleration/: aabb.h  bvh.h  onb.h  pdf.h
src/core/: color.h  interval.h  stats.h  vec3.h
src/image/: rtw_stb_image.h  stb_image_impl.cpp
src/materials/: bsdf.cpp  bsdf.h  bxdf.h  bxdf_material.h  bxdf_utils.h  material.h
src/materials/bxdfs/: biggx_bxdf.h  ggx_bxdf.h  lambertian_bxdf.h  mtl_ext_ggx_bxdf.h  mtl_ggx_bxdf.h  specular_bxdf.h
src/materials/textures/: texture.h
src/objects/: hittable.h  hittable_list.h
src/objects/primatives/: quad.h  sphere.h  triangle.h
src/objects/primitives/: sphere.h
src/renderers/: bidirectional_path_tracer.cpp  bidirectional_path_tracer.h  unidirectional_path_tracer.cpp  unidirectional_path_tracer.h
src/scene/: scene_loader.h
src/utils/: utils.hpp
